--- a/pagina2.html
+++ b/pagina2.html
@@ -10,5 +10,6 @@
     <body>
         <h1>Página 2.</h1>
         <p>Primeiro parágrafo.</p>
+        <p>Segundo parágrafo.</p>
     </body>
 </html>
